# mlx-whisperx

./: .gitignore  README.md  pyproject.toml
mlx_whisperx/: __init__.py  __main__.py  _compat.py  alignment.py  audio.py  cli.py  diarize.py  log_utils.py  parity.py  pipeline.py  schema.py  transcribe.py  writers.py
mlx_whisperx/backend/: __init__.py
mlx_whisperx/backend/mlx_whisper/: __init__.py  _version.py  audio.py  cli.py  decoding.py  load_models.py  timing.py  tokenizer.py  torch_whisper.py  transcribe.py  version.py  whisper.py  writers.py
mlx_whisperx/vads/: __init__.py  _pyannote_impl.py  pyannote.py  silero.py  vad.py
